--- a/Docs/TODAES/paper.tex
+++ b/Docs/TODAES/paper.tex
@@ -30,7 +30,7 @@
 \usepackage{hyphenat}
 \usepackage[english]{babel}
 \usepackage[skip=\baselineskip]{caption}
-\captionsetup[lstlisting]{font={small,tt}}
+\captionsetup[lstlisting]{font={normalsize,tt}}
 
 \hyphenation{ef-fect-ive consi-de-red demons-trate se-cond veri-fication covera-ge des-cribe reali-zation opera-tor re-pre-sentation methodo-lo-gy di-gi-tal chara-cteristics granu-lar ge-nerally diago-nal para-meters spe-cification re-presentable me-thods ope-rations sche-dule deve-loped des-cribes diffe-rent mo-dels sa-ving ve-rified proper-ties mini-mum mathe-matical tole-rated limi-ted op-tical net-works semi-conduc-tor go-to-pro-grams }
 
@@ -634,63 +634,79 @@ The clustering benchmark seems to be the limit to test the ESBMC (described) imp
   \centering
   \caption{Experimental results of the HW-SW partitioning benchmarks.}  
   \begin{tabular}{*{9}{cc|c|c|c|c|c|c|c}}
-
- &  & \textbf{CRC32} & \textbf{Patricia} & \textbf{Dijkstra} & \textbf{Clustering} & \textbf{RC6} & \textbf{Fuzzy} & \textbf{Mars} \\[0.15cm]
+\\
+ &  & \rotatebox{90}{\textbf{\normalsize{CRC32}}} & \rotatebox{90}{\textbf{\normalsize{Patricia}}} & \rotatebox{90}{\textbf{\normalsize{Dijkstra}}} & \rotatebox{90}{\textbf{\normalsize{Clustering}}} & \rotatebox{90}{\textbf{\normalsize{RC6}}} & \rotatebox{90}{\textbf{\normalsize{Fuzzy}}} & \rotatebox{90}{\textbf{\normalsize{Mars}}} \\[0.15cm]
 \cmidrule(r){3-9}
 
-&\textbf{Nodes} &25 &21 &26 &150 &329 &261 &417\\
-&\textbf{Edges} &32 &48 &69 &331 &448 &442 &600\\
-&\textbf{S0} &20 &10 &20 &50 &600 &4578 &300\\
+&\textbf{\normalsize{Nodes}} &\normalsize{25} & \normalsize{21} & \normalsize{26} & \normalsize{150} & \normalsize{329} & \normalsize{261} & \normalsize{417}\\
+&\textbf{\normalsize{Edges}} &\normalsize{32} & \normalsize{48} & \normalsize{69} & \normalsize{331} & \normalsize{448} & \normalsize{442} & \normalsize{600}\\
+&\textbf{\normalsize{S0}} &\normalsize{20} & \normalsize{10} & \normalsize{20} & \normalsize{50} & \normalsize{600} & \normalsize{4578} & \normalsize{300} \\
 
 %EXACT Solution
 \bottomrule[1.5pt]
 \rowcolors{1}{}{lightgray}
 
-\multirow{2}{*}{\textbf{Exact Solution}}
-&  Hp   &  15   &  47   &  31   &  241   &  692    &  13820   &  876 \\
-&  Sp   &  19   &  4   &  19   &  46   &  533    &  4231   &  297  \\
+\multirow{4}{*}{\textbf{\normalsize{Exact Solution}}}
+& & & & & & & & & \\
+&  \normalsize{Hp}   &  \normalsize{15}   &  \normalsize{47}   &  \normalsize{31}   &  \normalsize{241} &  \normalsize{692} &  \normalsize{13820}   &  \normalsize{876} \\
+&  \normalsize{Sp}   &  \normalsize{19}   &  \normalsize{4}   &  \normalsize{19}   &  \normalsize{46}   &  \normalsize{533}    &  \normalsize{4231}   &  \normalsize{297}  \\
+& & & & & & & & & \\
 
 \bottomrule[1.5pt]
 %ILP
-\multirow{2}{*}{\textbf{ILP}}  
-&  T(s)   &  2   &  1   &  2   &  649   &  1806    &  TO   &  5.42  \\
-&  Hp   &  15   &  47   &  31   &  241   &  692    &  -   &  876  \\
+\multirow{4}{*}{\textbf{\normalsize{ILP}}}
+& & & & & & & & & \\
+&  \normalsize{T(s)}   &  \normalsize{2}   &  \normalsize{1}  &  \normalsize{2}   &  \normalsize{649}   &  \normalsize{1806}    &  \normalsize{TO}   &  \normalsize{5.42}  \\
+&  \normalsize{Hp}   &  \normalsize{15}  &  \normalsize{47}   &  \normalsize{31}   &  \normalsize{241}   &  \normalsize{692}    &  -   &  \normalsize{876}  \\
+& & & & & & & & & \\
 \hline
 
 %GA
-\multirow{2}{*}{\textbf{GA}}
-&  T(s)   &  7   &  7   &  9   &  340   &  2050    &  1.37   &  5000  \\
-&  Error \%   &  13.3   &  0   &  29   &  1.7   &  -6.5    &  -37.6   &  -27.5  \\
+\multirow{4}{*}{\textbf{\normalsize{{GA}}}}
+& & & & & & & & & \\
+&  \normalsize{T(s)}   &  \normalsize{7}   &  \normalsize{7}   &  \normalsize{9}   &  \normalsize{340}   &  \normalsize{2050}    &  \normalsize{1.37}   &  \normalsize{5000}  \\
+&  \normalsize{Error \%}   &  \normalsize{13.3}   &  \normalsize{0}   &  \normalsize{29}   &  \normalsize{1.7}   &  \normalsize{-6.5}    &  \normalsize{-37.6}   &  \normalsize{-27.5}  \\
+& & & & & & & & & \\
 \hline
 
 %ESBMC
-\multirow{2}{*}{\textbf{ESBMC}}
-&  T(s)   &  31   &  362   &  292   &  3010   &  TO    &  MO   &  MO  \\
-&  Hp   &  15   &  47   &  31   &  241   &  -    &  -   &  -  \\
+\multirow{4}{*}{\textbf{\normalsize{{ESBMC}}}}
+& & & & & & & & & \\
+&  \normalsize{T(s)}   & \normalsize{ 31}   &  \normalsize{362}   &  \normalsize{292}   &  \normalsize{3010}   & \normalsize{ TO}    &  \normalsize{MO}   &  \normalsize{MO } \\
+&  \normalsize{Hp}   &  \normalsize{15}   &  \normalsize{47}   &  \normalsize{31}   &  \normalsize{241}   &  -    &  -   &  -  \\
+& & & & & & & & & \\
 \hline
 
 %MultiCore ESBMC
-\multirow{2}{*}{\textbf{ESBMC-SS}}
-&  T(s)   &  2   &  6   &  7   &  1615   &  TO    &  TO   &  TO  \\
-&  Hp   &  15   &  47   &  31   &  241   &  -    &  -   &  -  \\
+\multirow{4}{*}{\textbf{\normalsize{{ESBMC-SS}}}}
+& & & & & & & & & \\
+&  \normalsize{T(s)}   & \normalsize{ 2 }  &  \normalsize{6}   &  \normalsize{7 }  &  \normalsize{1615}   &  \normalsize{TO}    &  \normalsize{TO}   &  \normalsize{TO}  \\
+&  \normalsize{Hp}   &  \normalsize{15}   &  \normalsize{47}   &  \normalsize{31 }  &  \normalsize{241 }  &  -    &  -   &  -  \\
+& & & & & & & & & \\
 \hline
 
 %ESBMC Parallel sequential
-\multirow{2}{*}{\textbf{ESBMC-PS}}
-&  T(s) &  4 &  10   &  11   &  2238   &  TO    &  MO   &  MO  \\
-&  Hp   &  15   &  47   &  31   &  241   &  -    &  -   &  -  \\
+\multirow{4}{*}{\textbf{\normalsize{ESBMC-PS}}}
+& & & & & & & & & \\
+&  \normalsize{T(s)} &  \normalsize{4} &  \normalsize{10}   &  \normalsize{11}   &  \normalsize{2238}   &  \normalsize{TO}    &  \normalsize{MO}   &  \normalsize{MO}  \\
+&  \normalsize{Hp}   &  \normalsize{15}   &  \normalsize{47}   &  \normalsize{31}   &  \normalsize{241}   &  -    &  -   &  -  \\
+& & & & & & & & & \\
 \hline
 
 %ESBMC Parallel Binary
-\multirow{2}{*}{\textbf{ESBMC-PB}}
-&  T(s)   &  6   &  5   &  6   &  207   &  TO    &  MO   &  MO \\
-&  Hp   &  15   &  47   &  38   &  241   &  -    &  -   &  -  \\
+\multirow{4}{*}{\textbf{\normalsize{{ESBMC-PB}}}}
+& & & & & & & & & \\
+&  \normalsize{T(s)}   &  \normalsize{6}   & \normalsize{ 5}   &  \normalsize{6}   &  \normalsize{207}   &  \normalsize{TO}    & \normalsize{MO}   & \normalsize{MO} \\
+&  \normalsize{Hp}   &  \normalsize{15}   &  \normalsize{47}   &  \normalsize{38}   &  \normalsize{241}   &  -    &  -   &  -  \\
+& & & & & & & & & \\
 \hline
 
 %vZ
-\multirow{2}{*}{\textbf{ESBMC-$\nu$Z}}
-&  T(s)   &  0.3   &  0.3   &  0.7   &  86.4   &  TO    &  TO   &  TO  \\
-&  Hp   &  15   &  47   &  31   &  241   &  -    &  -   &  -  \\
+\multirow{4}{*}{\textbf{\normalsize{{ESBMC-$\nu$Z}}}}
+& & & & & & & & & \\
+&  \normalsize{T(s)}   &  \normalsize{0.3}   & \normalsize{0.3}   &  \normalsize{0.7}   &  \normalsize{86.4}   &  \normalsize{TO}    &  \normalsize{TO}   &  \normalsize{TO } \\
+&  \normalsize{Hp}   &  \normalsize{15}   &  \normalsize{47}   &  \normalsize{31}   &  \normalsize{241}   &  -    &  -   &  -  \\
+& & & & & & & & & \\
 
 \bottomrule[1.5pt]
 \end{tabular}
@@ -736,185 +752,187 @@ Finally, there is an issue about $150$ nodes problem, since it seems to be the l
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 
 % Bibliography
-%\bibliographystyle{ACM-Reference-Format-Journals}
-%\providecommand{\natexlab}[1]{#1}
-%\providecommand{\url}[1]{{#1}}
-%\providecommand{\urlprefix}{URL }
-%\expandafter\ifx\csname urlstyle\endcsname\relax
-%  \providecommand{\doi}[1]{DOI~\discretionary{}{}{}#1}\else
-%  \providecommand{\doi}{DOI~\discretionary{}{}{}\begingroup
-%  \urlstyle{rm}\Url}\fi
-%\providecommand{\eprint}[2][]{\url{#2}}
+\begin{thebibliography}{5}
+
+\providecommand{\natexlab}[1]{#1}
+\providecommand{\url}[1]{{#1}}
+\providecommand{\urlprefix}{URL }
+\expandafter\ifx\csname urlstyle\endcsname\relax
+  \providecommand{\doi}[1]{DOI~\discretionary{}{}{}#1}\else
+  \providecommand{\doi}{DOI~\discretionary{}{}{}\begingroup
+  \urlstyle{rm}\Url}\fi
+\providecommand{\eprint}[2][]{\url{#2}}
+\bibliographystyle{ACM-Reference-Format-Journals}
 
 %1
-%\bibitem{Arato2003}
-%Arat\'o, P., Juh\'asz, S., Mann, Z.A., Orb\'an, A., Papp, D. (2003), ``{Hardware/software partitioning in embedded system %design},'' In: Proc. of the Intl. Symp. of Intelligent Signal Processing, pp. 192--202.
+\bibitem{Arato2003}
+Arat\'o, P., Juh\'asz, S., Mann, Z.A., Orb\'an, A., Papp, D. (2003), ``{Hardware/software partitioning in embedded system design},'' In: Proc. of the Intl. Symp. of Intelligent Signal Processing, pp. 192--202.
 
 %2
-%\bibitem{Mann2007}
-%Mann, Z.A., Orb\'an, A., Arat\'o, P., ``{Finding optimal hardware/software partitions},'' In: Formal Methods in System %Design, v. 31, n. 3 pp. 241--263.
+\bibitem{Mann2007}
+Mann, Z.A., Orb\'an, A., Arat\'o, P., ``{Finding optimal hardware/software partitions},'' In: Formal Methods in System Design, v. 31, n. 3 pp. 241--263.
 
 %3
-%\bibitem{Trindade2015}
-%Trindade, A., Cordeiro. L. (2015), ``{Applying SMT-based verification to hardware/software partitioning in embedded %systems,}'' In: Design Automation for Embedded Systems (to appear).
+\bibitem{Trindade2015}
+Trindade, A., Cordeiro. L. (2015), ``{Applying SMT-based verification to hardware/software partitioning in embedded systems,}'' In: Design Automation for Embedded Systems (to appear).
 
 %4
-%\bibitem{Trindade2016}
-%Trindade, A. B., Ismail, H. I., Cordeiro, L. C. (2015), ``{Multi-Core Model Checking to Hardware-Software Partitioning in %Embedded Systems (short paper),}'' To appear in V Brazilian Symposium on Computing Systems Engineering (SBESC), pp. 1-4.
+\bibitem{Trindade2016}
+Trindade, A. B., Ismail, H. I., Cordeiro, L. C. (2015), ``{Multi-Core Model Checking to Hardware-Software Partitioning in Embedded Systems (short paper),}'' To appear in V Brazilian Symposium on Computing Systems Engineering (SBESC), pp. 1-4.
 
 %5
-%\bibitem{Bjorner2015}
-%Bjorner, N., Phan, A-D., Fleckenstein, L. (2015), ``{$\nu$Z - An Optimizing SMT Solver},'' In: Proc. of the Intl. Conf. on %Tools and Algorithms for the Construction and Analysis of Systems, LNCS 9035, pp. 194--199.
+\bibitem{Bjorner2015}
+Bjorner, N., Phan, A-D., Fleckenstein, L. (2015), ``{$\nu$Z - An Optimizing SMT Solver},'' In: Proc. of the Intl. Conf. on Tools and Algorithms for the Construction and Analysis of Systems, LNCS 9035, pp. 194--199.
 
 %6
-%\bibitem{Tang2009}
-%Tang, T., Lin, Y., Ren, X. (2010), ``{Mapping OpenMP concepts to the stream programming model. In: Proc. of the Intl. Conf. %on Computer Science Education},'' pp. 1900--1905.
+\bibitem{Tang2009}
+Tang, T., Lin, Y., Ren, X. (2010), ``{Mapping OpenMP concepts to the stream programming model. In: Proc. of the Intl. Conf. on Computer Science Education},'' pp. 1900--1905.
 
 %7
-%\bibitem{OpenMP1998}
-%OpenMP Architecture Review Board, OpenMP C and C++
-%Application Pogram Interface, Version 1.0, October 1998.
-%http://www.openmp.org%
+\bibitem{OpenMP1998}
+OpenMP Architecture Review Board, OpenMP C and C++
+Application Pogram Interface, Version 1.0, October 1998.
+http://www.openmp.org%
 
 %8
-%\bibitem{Cordeiro2012}
-%Cordeiro, L., Fischer, B., Marques-Silva, J. (2012), ``{SMT-based Bounded Model Checking for Embedded ANSI-C Software},'' In: %IEEE Transactions on Software Engineering, v. 38, n. 4, pp. 957--974.
+\bibitem{Cordeiro2012}
+Cordeiro, L., Fischer, B., Marques-Silva, J. (2012), ``{SMT-based Bounded Model Checking for Embedded ANSI-C Software},'' In: IEEE Transactions on Software Engineering, v. 38, n. 4, pp. 957--974.
 
 %9
-%\bibitem{Rao2009}
-%Rao, S. (2009), ``{Engineering Optimization: Theory and Practice. 4th edition}'', John Wiley \& Sons, Hoboken.
+\bibitem{Rao2009}
+Rao, S. (2009), ``{Engineering Optimization: Theory and Practice. 4th edition}'', John Wiley \& Sons, Hoboken.
 
 %10
-%\bibitem{Biere2009}
-%Biere, A. (2009), ``{Bounded Model Checking. In: Biere, A., Heule, M., van Marren, H., Walsh, T. (org.)}'', Handbook of %Satisfiability, IOS Press, pp. 457–-481.
+\bibitem{Biere2009}
+Biere, A. (2009), ``{Bounded Model Checking. In: Biere, A., Heule, M., van Marren, H., Walsh, T. (org.)}'', Handbook of Satisfiability, IOS Press, pp. 457–-481.
 
 %11
-%\bibitem{Armando2009}
-%Armando, A., Mantovani, J., Platania, L. (2009), ``{Bounded model checking of software using SMT solvers instead of SAT %solvers},'' In: Intl. Journal on Software Tools for Technology Transfer, v. 11, n. 1, pp. 69--83.
+\bibitem{Armando2009}
+Armando, A., Mantovani, J., Platania, L. (2009), ``{Bounded model checking of software using SMT solvers instead of SAT solvers},'' In: Intl. Journal on Software Tools for Technology Transfer, v. 11, n. 1, pp. 69--83.
 
 %12
-%\bibitem{Ganai2006}
-%Ganai, M., Gupta, A. (2006), ``{Accelerating high-level bounded model checking},'' In: Proc. of the IEEE/ACM Intl. Conf. on %Computer-Aided Design, pp. 794-–801.
+\bibitem{Ganai2006}
+Ganai, M., Gupta, A. (2006), ``{Accelerating high-level bounded model checking},'' In: Proc. of the IEEE/ACM Intl. Conf. on Computer-Aided Design, pp. 794-–801.
 
 %13
-%\bibitem{Ramalho2013}
-%Ramalho, M., Freitas, M., Souza, F., Marques, H., Cordeiro, L. (2013), ``{SMT-Based Bounded Model Checking of C++ %Programs.},'' In: Intl. Conf. and Workshops on the Engineering of Computer-Based Systems, pp. 147--156.
+\bibitem{Ramalho2013}
+Ramalho, M., Freitas, M., Souza, F., Marques, H., Cordeiro, L. (2013), ``{SMT-Based Bounded Model Checking of C++ Programs.},'' In: Intl. Conf. and Workshops on the Engineering of Computer-Based Systems, pp. 147--156.
 
 %14
-%\bibitem{DeMoura2008}
-%De Moura, L., Bjorner, N. (2008), ``{Z3: An Efficient SMT Solver},'' In: Proc. of the Intl. Conf. on Tools and Algorithms for %the Construction and Analysis of Systems, LNCS 4963, pp. 337–-340.
+\bibitem{DeMoura2008}
+De Moura, L., Bjorner, N. (2008), ``{Z3: An Efficient SMT Solver},'' In: Proc. of the Intl. Conf. on Tools and Algorithms for the Construction and Analysis of Systems, LNCS 4963, pp. 337–-340.
 
 %15
-%\bibitem{Brummayer2009}
-%Brummayer, R., Biere, A. (2009), ``{Boolector: An Efficient SMT Solver for Bit-Vectors and Arrays.},'' In: Proc. of the Intl. %Conf. on Tools and Algorithms for the Construction and Analysis of Systems, LNCS 5505, pp. 174-–177.
+\bibitem{Brummayer2009}
+Brummayer, R., Biere, A. (2009), ``{Boolector: An Efficient SMT Solver for Bit-Vectors and Arrays.},'' In: Proc. of the Intl. Conf. on Tools and Algorithms for the Construction and Analysis of Systems, LNCS 5505, pp. 174-–177.
 
 %16
-%\bibitem{Barrett2011}
-%Barrett, C., Conway, C. Deters, M., Hadarean, L., Jovanovic, D., King, T., Reynolds, A., Tinelli, C. (2011), ``{CVC4},'' In: %Proc. of the Intl. Conf. on Computer-Aided Verification, LNCS 6806, pp. 171--177.
+\bibitem{Barrett2011}
+Barrett, C., Conway, C. Deters, M., Hadarean, L., Jovanovic, D., King, T., Reynolds, A., Tinelli, C. (2011), ``{CVC4},'' In: Proc. of the Intl. Conf. on Computer-Aided Verification, LNCS 6806, pp. 171--177.
 
 %17
-%\bibitem{Bozzano2005}
-%Bozzano, M., Bruttomesso, R., Cimatti, A., Junttila, T., Rossum, P., Schulz, S., Sebastiani, R. (2005), ``{MathSAT: Tight %integration of SAT and mathematical decision procedures},'' In: Journal of Automated Reasoning, v. 35, n. 1-3, pp. 265--293.
+\bibitem{Bozzano2005}
+Bozzano, M., Bruttomesso, R., Cimatti, A., Junttila, T., Rossum, P., Schulz, S., Sebastiani, R. (2005), ``{MathSAT: Tight integration of SAT and mathematical decision procedures},'' In: Journal of Automated Reasoning, v. 35, n. 1-3, pp. 265--293.
 
 %18
-%\bibitem{Dutertre2014}
-%Dutertre, B. (2014), ``{Yices 2.2. In: Proc. of the Intl. Conf. on Computer-Aided Verification},'' LNCS 8559, pp. 737–-744.
+\bibitem{Dutertre2014}
+Dutertre, B. (2014), ``{Yices 2.2. In: Proc. of the Intl. Conf. on Computer-Aided Verification},'' LNCS 8559, pp. 737–-744.
 
 %19
-%\bibitem{Wu2014}
-%Wu, M., Wu, W., Tai, N., Zhao, H., Fan, J., Yuan, N. (2014), ``{Research on OpenMP model of the parallel programming %technology for homogeneous multicore DSP},'' In: Proc. of the Intl. Conf. on Software Engineering and Service Science, pp. %921--924.
+\bibitem{Wu2014}
+Wu, M., Wu, W., Tai, N., Zhao, H., Fan, J., Yuan, N. (2014), ``{Research on OpenMP model of the parallel programming technology for homogeneous multicore DSP},'' In: Proc. of the Intl. Conf. on Software Engineering and Service Science, pp. 921--924.
 
 %20
-%\bibitem{Bjorner2014}
-%Bjorner, N. and Phan, A. D. (2014), ``{$\nu$Z - Maximal Satisfaction with Z3},'' In: Proc. of the Intl. Symp. on Symbolic %Computation in Software Science, pp. 1--10.
+\bibitem{Bjorner2014}
+Bjorner, N. and Phan, A. D. (2014), ``{$\nu$Z - Maximal Satisfaction with Z3},'' In: Proc. of the Intl. Symp. on Symbolic Computation in Software Science, pp. 1--10.
 
 %21
-%\bibitem{Federica2008}
-%Federica, P., Rodolfo, F., Yuqing , S., Elisa, B. (2008), {``Authorization and User Failure Resiliency for WS-BPEL business %processes''}, In: Proc. of the Intl. Conf. on Service-Oriented Computing, LNCS 5364, pp. 116--131
+\bibitem{Federica2008}
+Federica, P., Rodolfo, F., Yuqing , S., Elisa, B. (2008), {``Authorization and User Failure Resiliency for WS-BPEL business processes''}, In: Proc. of the Intl. Conf. on Service-Oriented Computing, LNCS 5364, pp. 116--131
 
 %22
-%\bibitem{NarodytskaN}
-%Narodytska, N., Bacchus, F. (2014), {``Maximum Satisfiability Using Core-Guided MAXSAT Resolution},'' In: Proc. of the AAAI %Conf. on Artificial Intelligence, pp. 2717--2723.
+\bibitem{NarodytskaN}
+Narodytska, N., Bacchus, F. (2014), {``Maximum Satisfiability Using Core-Guided MAXSAT Resolution},'' In: Proc. of the AAAI Conf. on Artificial Intelligence, pp. 2717--2723.
 
 %23
-%\bibitem{Barth1995}
-%Barth, P., Davis-Putnam, A. (1995), {``Enumeration Algorithm for Linear
-%Pseudo-Boolean Optimization.''}, Technical Report MPI-I-95-2-003, Max Plank Institute for Computer Science.
+\bibitem{Barth1995}
+Barth, P., Davis-Putnam, A. (1995), {``Enumeration Algorithm for Linear
+Pseudo-Boolean Optimization.''}, Technical Report MPI-I-95-2-003, Max Plank Institute for Computer Science.
 
 %24
-%\bibitem{Vasco2005}
-%Vasco, M., Marques-Silva, J. (2005), {``Effective Lower Bounding Techniques for Pseudo-Boolean Optimization''}, IST/INESC-ID, %Technical University of Lisbon, Portugal.
+\bibitem{Vasco2005}
+Vasco, M., Marques-Silva, J. (2005), {``Effective Lower Bounding Techniques for Pseudo-Boolean Optimization''}, IST/INESC-ID, Technical University of Lisbon, Portugal.
 
 %25
-%\bibitem{Z3API}
-%Magellan, ``{Source code and documentation},''
-%  \url{https://github.com/Z3Prover/z3}, Accessed 18th August 2015.
+\bibitem{Z3API}
+Magellan, ``{Source code and documentation},''
+  \url{https://github.com/Z3Prover/z3}, Accessed 18th August 2015.
   
 %26
-%\bibitem{Cormem}
-%Cormen, T., Leiserson, C., Rivest, R., Stein, C. (2009), {``Introduction to Algorithms''}, MIT Press, pp. I-XIX, pp. 1--1292.
+\bibitem{Cormem}
+Cormen, T., Leiserson, C., Rivest, R., Stein, C. (2009), {``Introduction to Algorithms''}, MIT Press, pp. I-XIX, pp. 1--1292.
 
 %27
-%\bibitem{Dagum1998}
-%Dagum, L., Menon, R. (1998), ``{OpenMP: An Industry-Standard API for Shared-Memory Programming.},'' In: Proc. of the Intl. Conf. on Computational Science \& Engineering, v. 5, n. 1, pp. 46--55.
+\bibitem{Dagum1998}
+Dagum, L., Menon, R. (1998), ``{OpenMP: An Industry-Standard API for Shared-Memory Programming.},'' In: Proc. of the Intl. Conf. on Computational Science \& Engineering, v. 5, n. 1, pp. 46--55.
 
 %28
-%\bibitem{TheMathWorks2013}
-%The MathWorks, Inc. (2013), ``{MATLAB (version R2013a)}'', Natick, MA.
+\bibitem{TheMathWorks2013}
+The MathWorks, Inc. (2013), ``{MATLAB (version R2013a)}'', Natick, MA.
 
 %29
-%\bibitem{Tranquillo2011}
-%Tranquillo, J. (2011), ``{Matlab for Engineering and the Life Sciences}'', Synthesis Lectures on Engineering. Morgan \& Claypool.
+\bibitem{Tranquillo2011}
+Tranquillo, J. (2011), ``{Matlab for Engineering and the Life Sciences}'', Synthesis Lectures on Engineering. Morgan \& Claypool.
 
 %30
-%\bibitem{Hong2010}
-%Hong, L., Cai, J. (2010), ``{The application guide of mixed programming between MATLAB and other programming languages},'' In: Proc. of the Intl. Conf. on Computer and Automation Engineering, pp. 185--189.
+\bibitem{Hong2010}
+Hong, L., Cai, J. (2010), ``{The application guide of mixed programming between MATLAB and other programming languages},'' In: Proc. of the Intl. Conf. on Computer and Automation Engineering, pp. 185--189.
 
 %31
-%\bibitem{Cordeiro2011}
-%Cordeiro, L., Fischer, B. (2011), ``{Verifying multi-threaded software using SMT-based context-bounded model checking.},'' In: Proc. of the Intl. Conf. on Software Engineering, pp. 331--340.
+\bibitem{Cordeiro2011}
+Cordeiro, L., Fischer, B. (2011), ``{Verifying multi-threaded software using SMT-based context-bounded model checking.},'' In: Proc. of the Intl. Conf. on Software Engineering, pp. 331--340.
 
 %32
-%\bibitem{Teich2012}
-%Teich, J. (2012), ``{Hardware/Software Codesign: The Past, the Present, and Predicting the Future},'' In: Proc. of the IEEE, Special Centennial Issue, v. 100, pp. 1411--1430.
+\bibitem{Teich2012}
+Teich, J. (2012), ``{Hardware/Software Codesign: The Past, the Present, and Predicting the Future},'' In: Proc. of the IEEE, Special Centennial Issue, v. 100, pp. 1411--1430.
 
 %33
-%\bibitem{Guthaus2001}
-%Guthaus, M., Ringenberg, J., Ernst, D., Austin, T., Mudge, T., Brown, R. (2001), ``{MiBench: a free, commercially representative embedded benchmark suite},'' In: Proc. of the annual workshop on workload characterization, pp. 3--14.
+\bibitem{Guthaus2001}
+Guthaus, M., Ringenberg, J., Ernst, D., Austin, T., Mudge, T., Brown, R. (2001), ``{MiBench: a free, commercially representative embedded benchmark suite},'' In: Proc. of the annual workshop on workload characterization, pp. 3--14.
 
 %34
-%\bibitem{Arato2005}
-%Arat\'o, P., Mann, Z.A., Orb\'an, A. (2005), ``{Algorithmic aspects of hardware/software partitioning.},'' Transactions on Design Automation of Electronic Systems, v. 1, pp. 136–-156.
+\bibitem{Arato2005}
+Arat\'o, P., Mann, Z.A., Orb\'an, A. (2005), ``{Algorithmic aspects of hardware/software partitioning.},'' Transactions on Design Automation of Electronic Systems, v. 1, pp. 136–-156.
 
 %35
-%\bibitem{Holzmann2011}
-%Holzmann, G.J., Joshi, R., Groce, A. (2011), ``{Swarm Verification Techniques},'' In: IEEE Transactions on Software Engineering, v. 37, n. 6, pp. 845--857.
+\bibitem{Holzmann2011}
+Holzmann, G.J., Joshi, R., Groce, A. (2011), ``{Swarm Verification Techniques},'' In: IEEE Transactions on Software Engineering, v. 37, n. 6, pp. 845--857.
 
 %36
-%\bibitem{Holzmann2012}
-%Holzmann, G. (2012), ``{Parallelizing the spin model checker. In: Proc. of the Intl. Symp. on Model Checking Software},'' LNCS 7385, pp. 155--171.
+\bibitem{Holzmann2012}
+Holzmann, G. (2012), ``{Parallelizing the spin model checker. In: Proc. of the Intl. Symp. on Model Checking Software},'' LNCS 7385, pp. 155--171.
 
 %37
-%\bibitem{Wintersteiger2009}
-%Wintersteiger, C., Hamadi, Y., De Moura, L. (2009), ``{A Concurrent Portfolio Approach to SMT Solving.},'' In: Proc. of the Intl. Conf. on Computer-Aided Verification, LNCS 5643, pp. 715--720.
+\bibitem{Wintersteiger2009}
+Wintersteiger, C., Hamadi, Y., De Moura, L. (2009), ``{A Concurrent Portfolio Approach to SMT Solving.},'' In: Proc. of the Intl. Conf. on Computer-Aided Verification, LNCS 5643, pp. 715--720.
 
 %38
-%\bibitem{Qawasmeh2014}
-%Qawasmeh, A., Malik, A., Chapman, B. (2014), ``{OpenMP task scheduling analysis via OpenMP runtime API and tool visualization.},'' In: Proc. of the Intl. Symp. on Parallel \& Distributed processing, pp. 1049--1058.
+\bibitem{Qawasmeh2014}
+Qawasmeh, A., Malik, A., Chapman, B. (2014), ``{OpenMP task scheduling analysis via OpenMP runtime API and tool visualization.},'' In: Proc. of the Intl. Symp. on Parallel \& Distributed processing, pp. 1049--1058.
 
 %39
-%\bibitem{Pavlinovic2015}
-%Pavlinovic, Z., King, T., Wies, T. (2015),{``Practical SMT-Based Type Error Localization''}, In: Proc. of the Intl. Conf. on Functional Programming, pp. 412--423.
+\bibitem{Pavlinovic2015}
+Pavlinovic, Z., King, T., Wies, T. (2015),{``Practical SMT-Based Type Error Localization''}, In: Proc. of the Intl. Conf. on Functional Programming, pp. 412--423.
 
 %40
-%\bibitem{Patrick2015}
-%Sebastiani, R., Trentin, T. (2015), {``OptiMathSAT: A Tool for Optimization Modulo Theories''}, In: Proc. of the Intl. Conf. on Computer Aided Verification, LNCS 9206, pp. 447--454.
+\bibitem{Patrick2015}
+Sebastiani, R., Trentin, T. (2015), {``OptiMathSAT: A Tool for Optimization Modulo Theories''}, In: Proc. of the Intl. Conf. on Computer Aided Verification, LNCS 9206, pp. 447--454.
 
 %41
-%\bibitem{Holzmann11}
-%Gerard J. Holzmann, Rajeev Joshi, Alex Groce (2011), {``Swarm Verification Techniques''}, In: IEEE Trans. Software Eng. v. 37, n. 6, pp. 845--857.
+\bibitem{Holzmann11}
+Gerard J. Holzmann, Rajeev Joshi, Alex Groce (2011), {``Swarm Verification Techniques''}, In: IEEE Trans. Software Eng. v. 37, n. 6, pp. 845--857.
 
-%\end{thebibliography}
+\end{thebibliography}
 
 % Appendix
 %\appendix
@@ -939,11 +957,12 @@ Finally, there is an issue about $150$ nodes problem, since it seems to be the l
 %\appendixhead{ZHOU}
 
 % Acknowledgments
-\begin{acks}
-The authors would like to thank Dr. Maura Turolla of Telecom
-Italia for providing specifications about the application scenario.
-\end{acks}
+%\begin{acks}
+%The authors would like to thank Dr. Maura Turolla of Telecom
+%Italia for providing specifications about the application scenario.
+%\end{acks}
 
+% Bibliography
 % Bibliography
 %\bibliographystyle{ACM-Reference-Format-Journals}
 %\bibliography{acmsmall-sample-bibfile}
@@ -952,37 +971,38 @@ Italia for providing specifications about the application scenario.
                              % 'legacy' bibs and bibs with 'alternate codings'.
                              % Gerry Murray - March 2012
 
+
 % History dates
 %\received{February 2007}{March 2009}{June 2009}
 
 % Electronic Appendix
 %\elecappendix
 
-\medskip
+%\medskip
 
-\section{This is an example of Appendix section head}
+%\section{This is an example of Appendix section head}
 
-Channel-switching time is measured as the time length it takes for
-motes to successfully switch from one channel to another. This
-parameter impacts the maximum network throughput, because motes
-cannot receive or send any packet during this period of time, and it
-also affects the efficiency of toggle snooping in MMSN, where motes
-need to sense through channels rapidly.
+%Channel-switching time is measured as the time length it takes for
+%motes to successfully switch from one channel to another. This
+%parameter impacts the maximum network throughput, because motes
+%cannot receive or send any packet during this period of time, and it
+%also affects the efficiency of toggle snooping in MMSN, where motes
+%need to sense through channels rapidly.
 
-By repeating experiments 100 times, we get the average
-channel-switching time of Micaz motes: 24.3 $\mu$s. We then conduct
-the same experiments with different Micaz motes, as well as
-experiments with the transmitter switching from Channel 11 to other
-channels. In both scenarios, the channel-switching time does not have
-obvious changes. (In our experiments, all values are in the range of
-23.6 $\mu$s to 24.9 $\mu$s.)
+%By repeating experiments 100 times, we get the average
+%channel-switching time of Micaz motes: 24.3 $\mu$s. We then conduct
+%the same experiments with different Micaz motes, as well as
+%experiments with the transmitter switching from Channel 11 to other
+%channels. In both scenarios, the channel-switching time does not have
+%obvious changes. (In our experiments, all values are in the range of
+%23.6 $\mu$s to 24.9 $\mu$s.)
 
-\section{Appendix section head}
+%\section{Appendix section head}
 
-The primary consumer of energy in WSNs is idle listening. The key to
-reduce idle listening is executing low duty-cycle on nodes. Two
-primary approaches are considered in controlling duty-cycles in the
-MAC layer.
+%The primary consumer of energy in WSNs is idle listening. The key to
+%reduce idle listening is executing low duty-cycle on nodes. Two
+%primary approaches are considered in controlling duty-cycles in the
+%MAC layer.
 
 \end{document}
 % End of v2-acmsmall-sample.tex (March 2012) - Gerry Murray, ACM
