changes in benchmarks table

--- a/Docs/TODAES/paper.tex
+++ b/Docs/TODAES/paper.tex
@@ -582,29 +582,41 @@ To perform the experiments, some benchmarks provided by Mann {\it et al.}~\cite{
 \centering
 \caption {Description of Benchmarks.}
 \small
-\sffamily\footnotesize
+\sffamily\small
 \tabulinesep=6pt
-\begin{tabular}[c]{m{1.5cm}m{0.8cm}m{0.8cm}m{3.8cm}}
-  \toprule[1.5pt]
-%  \head{Name} & \head{Nodes} & \head{Edges} & \head{Description}\\
-  \midrule
-  
-\verb|CRC32| & \verb|25| & \verb|32| & \rmfamily 32-bit cyclic redundancy check ~\cite{Guthaus2001}\\
+\begin{tabular}[c]{m{1.9cm}m{0.9cm}m{0.9cm}m{9.0cm}}
+\\
+\toprule[1.5pt]
+\textbf{Name} & \textbf{Nodes} & \textbf{Edges} & \textbf{Description}\\
+\midrule
+\\
+\verb|CRC32| & \verb|25| & \verb|32| & \normalsize 32-bit cyclic redundancy check ~\cite{Guthaus2001}\\
+\\
 \hline
+\\
 \verb|Patricia| & \verb|21| & \verb|48| & \rmfamily Routine to insert values in Patricia Tree ~\cite{Guthaus2001}\\
+\\
 \hline
-
+\\
 \verb|Dijkstra| & \verb|26| & \verb|69| & \rmfamily Computer shortest paths in a graph ~\cite{Guthaus2001}\\
+\\
 \hline
+\\
 \verb|Clustering| & \verb|150| & \verb|331| & \rmfamily Image segmentation algorithm in a medical application\\
+\\
 \hline
+\\
 \verb|RC6| & \verb|329| & \verb|448| & \rmfamily RC6 cryptography graph algorithm\\
+\\
 \hline
+\\
 \verb|Fuzzy| & \verb|261| & \verb|422| & \rmfamily Clustering algorithm based on fuzzy logic\\
+\\
 \hline
+\\
 \verb|Mars| & \verb|417| & \verb|600| & \rmfamily MARS cipher from IBM algorithm\\
- 
-  \bottomrule[1.5pt]
+\\
+\bottomrule[1.5pt]
 \end{tabular}
 \label{Description-of-Benchmarks}
 \end{table}
