add Renato as co-author

--- a/Docs/TODAES/paper.tex
+++ b/Docs/TODAES/paper.tex
@@ -76,6 +76,8 @@ Hussama Ismail
 \affil{Federal University of Amazonas}
 Edilson Galv\~ao\
 \affil{Federal University of Amazonas}
+Renato Degelo\
+\affil{Federal University of Amazonas}
 Helder Silva
 \affil{Federal University of Amazonas}
 Lucas Cordeiro\affil{Federal University of Amazonas}
